Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -482,23 +482,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f0b55d94f60>"
+       "<folium.map.Marker at 0x7fa68a711320>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "recoleta_marker = None\n",
-    "recoleta_marker = neighborhood_markers[-1]\n",
+    "recoleta_marker = neighborhood_markers[4]\n",
     "recoleta_marker"
    ]
   },
